# Trading-Journal

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
api_validation/: API_VALIDATION.md  finnhub_ws_test.py  requirements.txt  run_smoke.py  yfinance_sample.py
api_validation/samples/: TSLA_daily_1y_1d.csv  TSLA_intraday_5d_1m.csv  alpha_vantage_IBM_5min.json  coingecko_ping.json  finnhub_tsla_quote.json  finnhub_ws.jsonl  tsla_1m_5d.csv
apps/api-gateway/: Dockerfile  README.md  pyproject.toml
apps/api-gateway/app/: config.py  deps.py  main.py
apps/api-gateway/app/routers/: health.py
apps/frontend/: Dockerfile  README.md  package.json  tsconfig.json
docs/: MVP_PLAN.md  ONBOARDING.md  PRD.md  README.md  TECHNICAL_SETUP.md
infra/pipelines/: README.md
infra/terraform/: README.md
services/ingestion/: README.md  pyproject.toml
services/ingestion/ingestion/: __init__.py  config.py  finnhub_ws.py  main.py  storage.py
services/ingestion/ingestion_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/ingestion/storage/test_parquet/: finnhub_trades_1763535566.parquet
services/ingestion/tests/: test_smoke.py
services/workers/: README.md
wireframes/: 01_dashboard_desktop.md  02_watchlist_desktop.md  03_backtest_builder_desktop.md  04_backtest_results_desktop.md  05_performance_analytics_desktop.md  06_dashboard_mobile.md  07_watchlist_mobile.md  08_backtest_mobile.md  09_order_entry_component.md  10_market_status_header.md  WIREFRAMES_INDEX.md
(+12 files in other folders)
