[project]
name = "api-gateway"
version = "0.1.0"
description = "FastAPI gateway for the trading journal platform"
authors = [{ name = "Trading Journal Team" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.7",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0"
]

[tool.uv]
dev-dependencies = ["api-gateway[dev]"]
