[project]
name = "ingestion-service"
version = "0.1.0"
description = "Market data ingestion workers"
authors = [{ name = "Trading Journal Team" }]
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "websockets>=12.0",
  "market-clients",
  "redis>=5.0.7",
  "pandas>=2.2.0",
  "pyarrow>=16.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
ingestion-finnhub-ws = "ingestion.main:run_cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]
exclude = ["tests*", "storage*", "*.egg-info"]
